Add GUI partition target selection
Support multi-partition dd-v1 target mapping in the GUI with per-partition storage selectors and validation.

Assisted-by: codex:gpt-5.5